--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,23 +35,36 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
+    /* Used to snackbar messages */
     compile 'com.android.support:design:23.2.0'
+    /* Used to support over 64k methods */
     compile('com.android.support:multidex:1.0.1') {
         exclude group: 'com.android.support', module: 'suppor-v4'
     }
-    compile 'com.android.support:palette-v7:23.2.0'
+    /* Used for load hero cards, town cards and citicen cards*/
     compile 'com.android.support:cardview-v7:23.2.0'
+    /* Advanced and flexible list view*/
     compile 'com.android.support:recyclerview-v7:23.2.0'
+
     compile 'com.android.support:support-v4:23.2.0'
+    /* used for serialize json data into objects*/
     compile 'com.google.code.gson:gson:2.5'
+    /* Image loader library*/
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    /* Object serialize and save into file using share preferences*/
     compile 'com.github.pwittchen:prefser:2.0.5'
+    /* Helper library to avoid boilerplate on binding views, or applying onclick listeners*/
     compile 'com.jakewharton:butterknife:7.0.1'
+    /* Library included in retrofit*/
     compile 'io.reactivex:rxandroid:1.1.0'
+    /* Helper library to avoid memory leaks.*/
     compile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+    /* Library to donwload and parse json and make API REST calls*/
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    /* Used by retrofit for conversión json into objects*/
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-    compile 'com.squareup.okhttp3:okhttp:3.1.1'
+    /* Used by retrofit */
     compile 'com.squareup.okhttp3:logging-interceptor:3.1.1'
-    compile 'com.scottyab:aescrypt:0.0.1'
+    /* Used by retrofit */
+    compile 'com.squareup.okhttp3:okhttp:3.1.1'
 }
